[gd_scene load_steps=6 format=3 uid="uid://camw5ti3r4wbu"]

[ext_resource type="Script" path="res://script/player.gd" id="1_2dlal"]
[ext_resource type="Texture2D" uid="uid://e13hkcampy3g" path="res://assets/p_idle_1.png" id="1_ks1pt"]
[ext_resource type="Texture2D" uid="uid://cd5tirr6relfq" path="res://assets/shadow.png" id="2_b5x2o"]
[ext_resource type="Texture2D" uid="uid://crqshnpitr8po" path="res://assets/p_side_1.png" id="4_tctsl"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5lrru"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ks1pt")
}],
"loop": true,
"name": &"idle",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_tctsl")
}],
"loop": true,
"name": &"roll",
"speed": 5.0
}]

[node name="player" type="Node2D"]
script = ExtResource("1_2dlal")

[node name="player_shadow" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.501961)
texture = ExtResource("2_b5x2o")
offset = Vector2(0, 30)

[node name="player_sprite" type="AnimatedSprite2D" parent="."]
modulate = Color(0.298039, 1, 1, 1)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_5lrru")
animation = &"roll"

[node name="roll_timer" type="Timer" parent="."]
wait_time = 0.2

[connection signal="timeout" from="roll_timer" to="." method="_on_roll_timer_timeout"]
